Fix select overflow on Chrome in some languages

--- a/src/styles/settings/dropdowns.css
+++ b/src/styles/settings/dropdowns.css
@@ -122,7 +122,7 @@
 /* Dropdowns: Quicklinks, Notes, Searchbar, and Quotes Options */
 
 #quicklinks_options.shown {
-    max-height: 430px;
+    max-height: 465px;
 }
 
 #notes_options.shown {
